# Computer-Graphics-Project

./: .gitignore  CMakeLists.txt  main.cpp
cmake/modules/: FindASSIMP.cmake  FindIrrKlang.cmake
includes/GLFW/: glfw3.h
includes/KHR/: khrplatform.h
includes/glm/: common.hpp  exponential.hpp  geometric.hpp  glm.hpp  integer.hpp  matrix.hpp  trigonometric.hpp
includes/glm/detail/: setup.hpp
includes/glm/ext/: matrix_clip_space.hpp  matrix_transform.hpp  quaternion_common.hpp  quaternion_geometric.hpp  quaternion_trigonometric.hpp
includes/glm/gtc/: constants.hpp  noise.inl  quaternion.hpp
resources/maze/: maze.txt
resources/objects/cube/: stone.mtl
resources/objects/floor/: floor.mtl
resources/objects/ghost/: Scared_ghost.mtl  ghost.mtl
resources/objects/ghost/black_ghost/: black_ghost.mtl
resources/objects/ghost/blue_ghost/: blue_ghost.mtl
resources/objects/ghost/cyan_ghost/: cyan_ghost.mtl
resources/objects/ghost/green_ghost/: green_ghost.mtl
resources/objects/ghost/orange_ghost/: orange_ghost.mtl
resources/objects/ghost/pink_ghost/: pink_ghost.mtl
resources/objects/grass/: grass.mtl
resources/objects/lantern/: Candle_lantern_OBJ.mtl
resources/objects/obstacle/: obstacle.mtl
resources/objects/torch/: torch.mtl
resources/objects/wall/: wall.mtl
resources/objects/zombie/: Scared_ghost.mtl  zombie.geo.mtl
resources/shaders/: instanced.fs  instanced.vs  lighting.fs  noLighting.fs  shader.fs  singular.vs  skybox.vs
src/camera/: Camera (1).cpp  Camera.cpp  Camera.h  Direction.h  FreeCamControls.h  Input.h
src/entity/: AIEntity.cpp  AIEntity.h  Entity.cpp  Entity.h  Ghost.cpp  Ghost.h
src/parser/: CustomMazeParser.cpp  CustomMazeParser.h  FileMazeParser.cpp  FileMazeParser.h  MazeParser.cpp  MazeParser.h  PositionEnum.h  RandomMazeParser.cpp  RandomMazeParser.h
src/scene/: Scene.cpp  Scene.h
src/scene/lighting/: DirectionalLight.cpp  DirectionalLight.h  DirectionalLightSource.cpp  DirectionalLightSource.h  LightSource.cpp  LightSource.h  Lighting.cpp  Lighting.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/scene/mesh/: Material.cpp  Material.h  Mesh.cpp  Mesh.h
src/scene/mesh/texture/: Texture.cpp  Texture.h  stb_image.h
src/scene/model/: InteractableModel.cpp  InteractableModel.h  Model.cpp  Model.h  Obstacle.cpp  Obstacle.h  Torch.cpp  Torch.h
src/scene/model/shader/: Shader.cpp  Shader.h
src/scene/skybox/: Skybox.cpp  Skybox.h  SkyboxTexture.cpp  SkyboxTexture.h
src/sound/: Sound.cpp  Sound.h  SoundProvider.cpp  SoundProvider.h
src/utils/: AxisAlignedBB.cpp  AxisAlignedBB.h  Color.cpp  Color.h  Face.h  FileUtils.cpp  FileUtils.h  Interactable.h  ModelLoader.cpp  ModelLoader.h  PathFindingAlgorithm.cpp  PathFindingAlgorithm.h  Structs.h
